--- a/Anhang.tex
+++ b/Anhang.tex
@@ -13,19 +13,7 @@
 \input{Anhang/AnhangUseCase.tex}
 \clearpage
 
-\input{Anhang/AnhangPflichtenheft.tex}
-\clearpage
-
-\input{Anhang/AnhangEntwuerfe.tex}
-\clearpage
-
-\input{Anhang/AnhangScreenshots.tex}
-\clearpage
-
 \input{Anhang/AnhangDoc.tex}
-\clearpage
-
-\input{Anhang/AnhangTest.tex}
 \clearpage
 
 \input{Anhang/AnhangKompDia.tex}
@@ -35,4 +23,7 @@
 \clearpage
 
 \input{Anhang/AnhangEPK.tex}
+\clearpage
+
+\input{Anhang/AnhangAbnahme.tex}
 \clearpage
