--- a/Anhang/AnhangPflichtenheft.tex
+++ b/Anhang/AnhangPflichtenheft.tex
@@ -1,10 +1,8 @@
 \subsection{Pflichtenheft (Auszug)}
 \label{app:Pflichtenheft}
 
-\subsubsection*{Zielbestimmung}
-
 \begin{enumerate}[itemsep=0em,partopsep=0em,parsep=0em,topsep=0em]
-\item Musskriterien % Wikipedia: für das Produkt unabdingbare Leistungen, die in jedem Fall erfüllt werden müssen
+\item Funktionale Anforderungen % Wikipedia: für das Produkt unabdingbare Leistungen, die in jedem Fall erfüllt werden müssen
 	\begin{enumerate}
 	\item Modul-Liste: Zeigt eine filterbare Liste der Module mit den dazugehörigen Kerninformationen sowie Symbolen zur Einhaltung des Entwicklungsprozesses an
 		\begin{itemize}
