--- a/Bibliographie.bib
+++ b/Bibliographie.bib
@@ -81,12 +81,13 @@
   url = {http://www.phpdoc.org/}
 }
 
-@BOOKLET{Symfony,
-  title = {Symfony - Open-Source PHP Web Framework},
+@BOOKLET{MobX,
+  title = {MobX - Open-Source PHP Web Framework},
   author = {{Sensio Labs}},
   lastchecked = {20.04.2010},
   year = {2010},
   owner = {grashorn},
   timestamp = {2010.04.22},
-  url = {http://www.symfony-project.org/}
+  url = {https://mobx.js.org/README.html}
 }
+
