--- a/Inhalt/Abnahmephase.tex
+++ b/Inhalt/Abnahmephase.tex
@@ -2,10 +2,8 @@
 \section{Abnahmephase} 
 \label{sec:Abnahmephase}
 
-\begin{itemize}
-	\item Welche Tests (\zB Unit-, Integrations-, Systemtests) wurden durchgeführt und welche Ergebnisse haben sie geliefert (\zB Logs von Unit Tests, Testprotokolle der Anwender)?
-	\item Wurde die Anwendung offiziell abgenommen?
-\end{itemize}
+Nach Abschluss des Implementierungsphase, konnte es dem Fachbereich zur Abnahme vorgelegt werden. Dafür wurde eine Abnahmeaufforderung an den Auftraggeber gerichtet. Die Abnahme bestand zum einen aus dem Code-Review und dem manuellen Testen des Fileuploaders. Auf die Implementierung von Unit Tests wurde verzichtet. Vor der Abnahme gab es für die Entwickler des Fachbereichs eine kurze Einführung in den Code und die Funktionsweise des Fileuploaders. Zum Testen wurde auf einem Dev-System eine Testumgebung eingerichtet, eine Beispielkonfiguration angelegt, ein Beispiel für einen Custom-Processor (Image Preview) implementiert und im Frontend eine simple GUI zur Visualisierung realisiert. In dieser Testumgebung konnten die Entwickler das Tool dann ausführlich testen und eigene Anpassungen vornehmen.
 
-\paragraph{Beispiel}
-Ein Auszug eines Unit Tests befindet sich im \Anhang{app:Test}. Dort ist auch der Aufruf des Tests auf der Konsole des Webservers zu sehen.
+Aufgrund einiger Mängel, die kritisch für die einwandfreie Funktinalität sind (u.a. Kompabilität im IE 11) musste der Fachbereich die Abnahme verweigern. Darüber hinaus gibt es weitere geringfügige Mängel (u.a. die unvollständige Entwicklerdokumentation usw.) und Änderungswüschne seitens des Auftraggebers.
+
+Im \Anhang{app:Abnahme} finden sich Auszüge aus der Abnahmeaufforderung und dem Abnahmeprotokoll.
