--- a/Inhalt/Analysephase.tex
+++ b/Inhalt/Analysephase.tex
@@ -53,7 +53,7 @@ Die Nicht-Monetären Vorteile sind wie bereits aufgeführt die einfache Handhabu
 \subsection{Anwendungsfälle}
 \label{sec:Anwendungsfaelle}
 
-Zur Veranschaulichung der Anwendungsfälle wurde ein Anwendungsfalldiagramm erstellt, das im \Anhang{app:UseCase} eingesehen werden kann. Dabei werden Anwendungsfälle aus Sicht eines Endnutzers und aus Sicht eines Entwicklers dargestellt. Der Anwendungsfall des Hochladens wurde außerdem exemplarisch in einer EPK modelliert. Diese ist im \Anhang{app:EPK} zu finden. Sie ist in drei Spalten gegliedert. Die erste Spalte beschreibt die Prozesse und Ereignisse vor, die mittlere Spalte während und die dritte Spalte nach dem Hochladen.
+Zur Veranschaulichung der Anwendungsfälle wurde ein Anwendungsfalldiagramm erstellt, das im \Anhang{app:UseCase} eingesehen werden kann. Dabei werden Anwendungsfälle aus Sicht eines Endnutzers und aus Sicht eines Entwicklers dargestellt. Der Anwendungsfall des Hochladens wurde außerdem exemplarisch in einer \ac{EPK} modelliert. Diese ist im \Anhang{app:EPK} zu finden. Sie ist in drei Spalten gegliedert. Die erste Spalte beschreibt die Prozesse und Ereignisse vor, die mittlere Spalte während und die dritte Spalte nach dem Hochladen.
 
 
 \subsection{Qualitätsanforderungen}
