--- a/Inhalt/Dokumentation.tex
+++ b/Inhalt/Dokumentation.tex
@@ -1,12 +1,4 @@
 % !TEX root = ../Projektdokumentation.tex
 \section{Dokumentation}
 \label{sec:Dokumentation}
-
-\begin{itemize}
-	\item Wie wurde die Anwendung für die Benutzer/Administratoren/Entwickler dokumentiert (\zB Benutzerhandbuch, \acs{API}-Dokumentation)?
-	\item Hinweis: Je nach Zielgruppe gelten bestimmte Anforderungen für die Dokumentation (\zB keine IT-Fachbegriffe in einer Anwenderdokumentation verwenden, aber auf jeden Fall in einer Dokumentation für den IT-Bereich).
-\end{itemize}
-
-\paragraph{Beispiel}
-Ein Ausschnitt aus der erstellten Benutzerdokumentation befindet sich im \Anhang{app:BenutzerDoku}.
-Die Entwicklerdokumentation wurde mittels PHPDoc\footnote{Vgl. \cite{phpDoc}} automatisch generiert. Ein beispielhafter Auszug aus der Dokumentation einer Klasse findet sich im \Anhang{app:Doc}. 
+Die Dokumentation des Fileuploaders besteht zum einen aus dieser Projektdokumentation und zum anderen aus einer Entwicklerdokumentation. Die Entwicklerdokumentation wiederum besteht aus der Backenddokumentation generiert durch PHPDoc und der Frontenddokumentation generiert durch TypeDoc. Aufgrund von Zeitmangel durch Verzögerungen während der Implementierungsphase, konnte die Entwicklerdokumentation allerdings nicht vollständig erstellt werden. Beispielhafte Auszüge aus der Entwicklerdokumentation finden sich im \Anhang{app:Doc}. Die Auszüge zeigen zum einen die Service-Klasse aus dem Backend und zum anderen die Fileuploader-Klasse auf dem Frontend.
