--- a/Inhalt/Projektplanung.tex
+++ b/Inhalt/Projektplanung.tex
@@ -5,38 +5,24 @@
 
 \subsection{Projektphasen}
 \label{sec:Projektphasen}
+Für die Umsetzung des Projektes standen 70 Stunden zur Verfügung, die im Vorfeld in unterschiedliche Projektphasen eingeteilt wurden. Diese können der Tabelle~\ref{tab:Zeitplanung}: Grobe Zeitplanung entnommen werden. Eine detailliertere Zeitplanung findet sich im \Anhang{app:Zeitplanung}. 
 
-\begin{itemize}
-	\item In welchem Zeitraum und unter welchen Rahmenbedingungen (\zB Tagesarbeitszeit) findet das Projekt statt?
-	\item Verfeinerung der Zeitplanung, die bereits im Projektantrag vorgestellt wurde.
-\end{itemize}
 
-\paragraph{Beispiel}
-Tabelle~\ref{tab:Zeitplanung} zeigt ein Beispiel für eine grobe Zeitplanung.
-\tabelle{Zeitplanung}{tab:Zeitplanung}{ZeitplanungKurz}\\
-Eine detailliertere Zeitplanung findet sich im \Anhang{app:Zeitplanung}.
-
+\tabelle{Grobe Zeitplanung}{tab:Zeitplanung}{ZeitplanungKurz}
 
 \subsection{Abweichungen vom Projektantrag}
 \label{sec:AbweichungenProjektantrag}
 
-\begin{itemize}
-	\item Sollte es Abweichungen zum Projektantrag geben (\zB Zeitplanung, Inhalt des Projekts, neue Anforderungen), müssen diese explizit aufgeführt und begründet werden.
-\end{itemize}
+Einige Abweichungen bestehen in der Zeitplanung, da während der Antragstellung die Anforderungen an das Projekt noch nicht klar definiert waren und dementsprechend die Planung nur sehr grob ausfiel. Nach der Anforderungsanalyse und mithilfe des Lastenheftes konnte die Planung deutlich genauer vorgenommen werden. Außerdem wurde auf das Erstellen eines Pflichtenheftes verzichtet. Inhaltlich stimmt das Projekt ansonsten mit dem Projektantrag überein.
 
 
 \subsection{Ressourcenplanung}
 \label{sec:Ressourcenplanung}
 
-\begin{itemize}
-	\item Detaillierte Planung der benötigten Ressourcen (Hard-/Software, Räumlichkeiten \usw).
-	\item \Ggfs sind auch personelle Ressourcen einzuplanen (\zB unterstützende Mitarbeiter).
-	\item Hinweis: Häufig werden hier Ressourcen vergessen, die als selbstverständlich angesehen werden (\zB PC, Büro). 
-\end{itemize}
+Zur Umsetzung des Projektes wurden Hardware-, Software und Personalressourcen benötigt. Eine Aufstellung der verwendeten Ressourcen findet sich im \Anhang{app:Ressourcen}. Bei den verwendeten Bibliotheken wurde darauf geachtet, dass diese kostenfrei mit einer Open Source Lizenz verfügbar sind, damit anfallende Kosten gering gehalten werden und das fertige Tool ohne Lizenzprobleme in Kundenprojekte integriert werden kann.
 
 
 \subsection{Entwicklungsprozess}
 \label{sec:Entwicklungsprozess}
-\begin{itemize}
-	\item Welcher Entwicklungsprozess wird bei der Bearbeitung des Projekts verfolgt (\zB Wasserfall, agiler Prozess)?
-\end{itemize}
+
+Da die Anforderungen an das Projekt klar und überschaubar sind, eignet sich dafür ein einfaches Wasserfallmodell. Dafür wurden anhand der Zeitplanung die Tickets im Ticketsystem angelegt und der zeitliche Ablauf in einem Gantt-Diagramm dargestellt. Dieses ist im Anhang zu finden %TODO
