--- a/Abkuerzungen.tex
+++ b/Abkuerzungen.tex
@@ -13,22 +13,12 @@
 % Die Option (in den eckigen Klammern) enthält das längste Label oder
 % einen Platzhalter der die Breite der linken Spalte bestimmt.
 \begin{acronym}[WWWWW]
-	\acro{AO}{\textsc{Alte Oldenburger} Krankenversicherung AG}
 	\acro{API}{Application Programming Interface}
 	\acro{CSS}{Cascading Style Sheets}
-	\acro{CSV}{Comma Separated Value}
 	\acro{EPK}{Ereignisgesteuerte Prozesskette}
-	\acro{ERM}{En\-ti\-ty-Re\-la\-tion\-ship-Mo\-dell}
 	\acro{HTML}{Hypertext Markup Language}\acused{HTML}
 	\acro{IDE}{Integrated Development Environment}
-	\acro{MVC}[MVC]{Model View Controller}
-	\acro{NatInfo}[\textsc{NatInfo}]{Natural Information System}
-	\acro{Natural}[\textsc{Natural}]{Programmiersprache der Software AG}\acused{Natural}
-	\acro{ORM}{Object-Relational Mapping}
-	\acro{PHP}{Hypertext Preprocessor}
-	\acro{SDK}{Software Development Kit}
-	\acro{SQL}{Structured Query Language}
-	\acro{SVN}{Subversion}
 	\acro{UML}{Unified Modeling Language}
 	\acro{XML}{Extensible Markup Language}
+	\acro{ES6}{ECMAScript Spezifikation 6}
 \end{acronym}
