--- a/Anhang/AnhangDoc.tex
+++ b/Anhang/AnhangDoc.tex
@@ -1,7 +1,20 @@
 \subsection{Entwicklerdokumentation}
 \label{app:Doc}
-\begin{center}
-\includegraphics[page=1, width=0.9\textwidth]{doc.pdf}
 
-\includegraphics[page=2, width=0.9\textwidth]{doc.pdf}
+\subsubsection*{Auszug Service-Klasse (Backend)}
+
+\begin{center}
+	\includegraphics[page=1, width=0.9\textwidth]{doc.pdf}
+	
+	\includegraphics[page=2, width=0.9\textwidth]{doc.pdf}
 \end{center}
+
+\subsubsection*{Auszug Fileuploader-Klasse (Frontend)}
+
+\begin{center}
+	\includegraphics[page=5, width=0.9\textwidth]{doc.pdf}
+	
+	\includegraphics[page=6, width=0.9\textwidth]{doc.pdf}
+\end{center}
+ 
+ 
