--- a/Inhalt/Fazit.tex
+++ b/Inhalt/Fazit.tex
@@ -5,29 +5,20 @@
 \subsection{Soll-/Ist-Vergleich}
 \label{sec:SollIstVergleich}
 
-\begin{itemize}
-	\item Wurde das Projektziel erreicht und wenn nein, warum nicht?
-	\item Ist der Auftraggeber mit dem Projektergebnis zufrieden und wenn nein, warum nicht?
-	\item Wurde die Projektplanung (Zeit, Kosten, Personal, Sachmittel) eingehalten oder haben sich Abweichungen ergeben und wenn ja, warum?
-	\item Hinweis: Die Projektplanung muss nicht strikt eingehalten werden. Vielmehr sind Abweichungen sogar als normal anzusehen. Sie müssen nur vernünftig begründet werden (\zB durch Änderungen an den Anforderungen, unter-/überschätzter Aufwand).
-\end{itemize}
+Das Projektziel wurde Teilweise erfüllt. Nach dem Abnahmetest durch den Fachbereich haben sich einige Mängel ergeben, die zur Verweigerung der Abnahme geführt haben, da dadurch wichtige Anforderungen nicht erfüllt sind. Der Großteil der Anforderungen wurde allerdings erfüllt und der Auftraggeber ist bis auf sonstige marginale Mängel damit wiegehend zufrieden. An einigen Stellen gibt es Änderungswüschne, die in einem zweiten Meilenstein umgesetzt werden sollen.
 
-\paragraph{Beispiel (verkürzt)}
-Wie in Tabelle~\ref{tab:Vergleich} zu erkennen ist, konnte die Zeitplanung bis auf wenige Ausnahmen eingehalten werden.
+Die Zeitplanung konnte bis auf eine Ausnahme weitgehend eingehalten werden. In der Tabelle~\ref{tab:Vergleich} können die Differenzen in den jeweiligen Projektphasen eingesehen werden. Wie bereits in Abschnit \ref{sec:FazitImplementierung}: Fazit zur Implementierungsphase erläutert kam es aufgrund von Schwierigkeiten und einer generellen unterschätzten Zeitplanugn zu Verzögerungen. Dies hat sich auf die Entwicklerdokumentation niedergeschlagen, die nicht vollendet werden konnte.
+
 \tabelle{Soll-/Ist-Vergleich}{tab:Vergleich}{Zeitnachher.tex}
 
 
 \subsection{Lessons Learned}
 \label{sec:LessonsLearned}
 
-\begin{itemize}
-	\item Was hat der Prüfling bei der Durchführung des Projekts gelernt (\zB Zeitplanung, Vorteile der eingesetzten Frameworks, Änderungen der Anforderungen)?
-\end{itemize}
+Während der Projektdurchführung konnte der Autor wichtige Erfahrungen im Projektmanagement sammeln. Außerdem wurde deutlich, wie wichtig eine stetige Kommunikation mit dem Auftraggeber für eine erfolgreiche Projektumsetzung ist. Außerdem konnten einige Erkenntnisse bzgl. verwendeter Bibliotheken gewonnen werden. Unter anderem die Bibliothek MobX, die sich für das State Management im Frontend als sehr hilfreich erwiesen hat. Die Realisierung des Projektes war für den Autor eine große Bereicherung.
 
 
 \subsection{Ausblick}
 \label{sec:Ausblick}
 
-\begin{itemize}
-	\item Wie wird sich das Projekt in Zukunft weiterentwickeln (\zB geplante Erweiterungen)?
-\end{itemize}
+Wie bereits in Abschnitt \ref{sec:Abnahmephase}: Abnahmephase erwähnt gibt es einige Mängel und Änderungswünsche seitens des Auftraggebers. Diese werden in einem zweiten Meilenstein behoben. Desweiteren wird evaluiert werden, welche weiteren Features in das Projekt integriert werden können.
