--- a/Tabellen/Kostenaufstellung.tex
+++ b/Tabellen/Kostenaufstellung.tex
@@ -3,9 +3,10 @@
 \rowcolor{heading}\textbf{Vorgang} & \textbf{Zeit} & \textbf{Kosten pro Stunde} & \textbf{Kosten} \\
 Entwicklungskosten & 70 \mbox{h} & $\eur{7,56} + \eur{15} = \eur{22,56}$ & \eur{1579,20} \\
 \rowcolor{odd}Fachgespräch & 3 \mbox{h} & $\eur{25} + \eur{15} = \eur{40}$ & \eur{120} \\
-Abnahmetest & 1 \mbox{h} & $\eur{25} + \eur{15} = \eur{40}$ & \eur{40} \\
-\rowcolor{odd}Anwenderschulung & 25 \mbox{h} & $\eur{25} + \eur{15} = \eur{40}$ & \eur{1000} \\
+Code-Review & 4 \mbox{h} & $\eur{25} + \eur{15} = \eur{40}$ & \eur{160} \\
+\rowcolor{odd}Abnahme & 2 \mbox{h} & $\eur{25} + \eur{15} = \eur{40}$ & \eur{80} \\
+Schulung der Entwickler & 7 \mbox{h} & $\eur{25} + \eur{15} = \eur{40}$ & \eur{280} \\
 \hline
 \hline
-\rowcolor{heading}\textbf{} & \textbf{} & \textbf{} & \textbf{\eur{2739,20}} \\
+\rowcolor{heading}\textbf{} & \textbf{} & \textbf{} & \textbf{\eur{2219,20}} \\
 \end{tabular}
