--- a/Abkuerzungen.tex
+++ b/Abkuerzungen.tex
@@ -21,4 +21,5 @@
 	\acro{UML}{Unified Modeling Language}
 	\acro{XML}{Extensible Markup Language}
 	\acro{ES6}{ECMAScript Spezifikation 6}
+	\acro{CMS}{Content Management System}
 \end{acronym}
