--- a/Inhalt/Einleitung.tex
+++ b/Inhalt/Einleitung.tex
@@ -16,7 +16,6 @@ Die meisten von der Webunit realisierten Projekte basieren auf leistungsfähigen
 
 \paragraph{Die Enterprise-Unit}
 Die Enterprise-Unit beschäftigt sich in erster Linie mit javabasierten Softwaresystemen. Das beinhaltet Intranet- und Unternehmensportale wie auch klassische individuelle datenverwaltende Software und Workflowsysteme.
-cfd
 
 \subsection{Projektziel} 
 \label{sec:Projektziel}
@@ -30,7 +29,7 @@ Die Motivation dieses Projektes ist es, durch ein einheitliches, einfach zu inte
 
 \subsection{Projektschnittstellen} 
 \label{sec:Projektschnittstellen}
-Da es sich um eine TYPO3 Extension handelt, verwendet das Projekt dementsprechend intern die APIs die von TYPO3 zur Verfügung gestellt werden. TYPO3 ist ein Open Source Enterprise Content Management System (CMS) für die Umsetzung von kleinen bis hin zu sehr großen multinationalen Websites. Nach außen stellt das Projekt sowohl im Backend als auch im Frontend für die Entwickler eine API bereit, mit der es in ein Kundenprojekt integriert werden kann. Unter anderen die Konfigurationsschnittstelle, mit der zentral die Konfigurationen verwaltet werden. TODO weitere Schnittstellen.
+Da es sich um eine TYPO3 Extension handelt, verwendet das Projekt dementsprechend intern die APIs die von TYPO3 zur Verfügung gestellt werden. TYPO3 ist ein Open Source Enterprise \ac{CMS} für die Umsetzung von kleinen bis hin zu sehr großen multinationalen Websites. Nach außen stellt das Projekt sowohl im Backend als auch im Frontend für die Entwickler eine API bereit, mit der es in ein Kundenprojekt integriert werden kann. Unter anderen im Backend die Konfigurationsschnittstelle, mit der zentral die Konfigurationen verwaltet werden können und eine ``Processors''-API zur Verarbeitung von Dateien. Im Frontend gibt es ebenfalls eine Processors-API und desweiteren Schnittstellen zum Realisieren einer GUI und zur Fehlerbehandlung.
 
 
 \subsection{Projektabgrenzung} 
